--- a/inner.css
+++ b/inner.css
@@ -17,8 +17,22 @@ body::-webkit-scrollbar-thumb {
 }
 a{
  color:#10ba04;
+    text-decoration: none;
 }
 a:hover{
     cursor: pointer;
     text-decoration: underline;
+}
+p{
+    margin-left: 20px;
+}
+ul.custom-list {
+  list-style-type: none;
+  padding-left: 0;
+    margin-left: 25px;
+}
+ul.custom-list li::before {
+  content: "+";
+  margin-right: 5px; /* Add spacing between the plus sign and the list item text */
+
 }
