--- a/index.css
+++ b/index.css
@@ -161,19 +161,26 @@ terminal-body iframe::-webkit-scrollbar-track {
     height: 0;
     padding: 0;
 }
-.footer{
+.footerContainer {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    display: flex; /* Add display: flex; to center the footer horizontally */
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.footer {
     color: #00ff00;
     font-family: monospace;
     font-size: 18px;
     line-height: 1.6;
-    position: absolute;
-    bottom: 0;
-    flex: 1;
     width: 90%;
     text-align: center;
-    border-bottom:4px solid #00ff00;
-    box-shadow: 0px 3px 6px  rgba(0, 255, 0, 0.4);
+    border-bottom: 4px solid #00ff00;
 }
+
 @media screen and (max-width: 768px) {
     /* Mobile-specific CSS */
     .terminal {
